--- a/app/src/main/res/layout/dieu_khien.xml
+++ b/app/src/main/res/layout/dieu_khien.xml
@@ -18,7 +18,8 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_bias="0.012"
-            app:srcCompat="@drawable/logo" />
+            app:srcCompat="@drawable/logo"
+            android:layout_marginStart="@dimen/_5sdp"/>
 
         <TextView
             android:id="@+id/textView"
