--- a/app/src/main/res/layout/item_report.xml
+++ b/app/src/main/res/layout/item_report.xml
@@ -6,9 +6,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:weightSum="6"
+        android:weightSum="4"
         android:paddingVertical="@dimen/_8sdp"
-        android:paddingHorizontal="@dimen/_15sdp">
+        android:paddingHorizontal="@dimen/_10sdp">
 
         <TextView
             android:id="@+id/mTvTime"
@@ -18,10 +18,10 @@
             android:textSize="@dimen/_16ssp"
             android:textColor="#000"
             android:layout_weight="2"
-            android:gravity="start"/>
+            android:gravity="center"/>
 
         <TextView
-            android:id="@+id/mTvTsc1"
+            android:id="@+id/mTvTs"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="TSC1: 18hz"
@@ -29,16 +29,6 @@
             android:textColor="#000"
             android:layout_weight="2"
             android:gravity="center"/>
-
-        <TextView
-            android:id="@+id/mTvTsc2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="TSC1: 18hz"
-            android:textSize="@dimen/_16ssp"
-            android:textColor="#000"
-            android:layout_weight="2"
-            android:gravity="end"/>
 
     </LinearLayout>
 
