--- a/app/src/main/res/layout/content_dieu_khien.xml
+++ b/app/src/main/res/layout/content_dieu_khien.xml
@@ -12,7 +12,7 @@
         android:layout_marginTop="@dimen/_10sdp">
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/lnLayoutNsx"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_18sdp"
