--- a/app/src/main/res/layout/dieu_khien.xml
+++ b/app/src/main/res/layout/dieu_khien.xml
@@ -72,44 +72,91 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView3" />
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
+        <LinearLayout
+            android:id="@+id/lnLayoutNsx"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView6"
             android:layout_marginStart="@dimen/_18sdp"
-            android:layout_marginLeft="@dimen/_20sdp"
             android:layout_marginTop="@dimen/_15sdp"
-            android:text="Ngày sản xuất:"
-            android:textColor="#07197E"
-            android:textSize="@dimen/_12ssp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView6" />
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/textView8"
-            android:layout_width="wrap_content"
+            <TextView
+                android:id="@+id/textView70"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Ngày sản xuất:"
+                android:textColor="#07197E"
+                android:textSize="@dimen/_12ssp" />
+
+            <TextView
+                android:id="@+id/tvNsx"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1/9/1999"
+                android:textColor="#07197E"
+                android:textSize="@dimen/_12ssp"
+                android:layout_marginLeft="8dp"/>
+
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/lnLayoutHsd"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="20dp"
+            android:layout_marginTop="10dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/lnLayoutNsx"
+            android:orientation="horizontal">
+
+            <TextView
+                android:id="@+id/textView80"
+                android:text="Hạn sử dụng:"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="#07197E"
+                android:textSize="16sp" />
+
+
+            <TextView
+                android:id="@+id/tvHsd"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1/9/1999"
+                android:textColor="#07197E"
+                android:textSize="@dimen/_12ssp"
+                android:layout_marginLeft="8dp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/lnLayoutSoSpLoi"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="20dp"
             android:layout_marginLeft="20dp"
             android:layout_marginTop="10dp"
-            android:text="Hạn sử dụng:"
-            android:textColor="#07197E"
-            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView7" />
+            app:layout_constraintTop_toBottomOf="@+id/lnLayoutHsd"
+            android:orientation="horizontal">
 
-        <TextView
-            android:id="@+id/textViewExpiryDate"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginStart="20dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginTop="10dp"
-            android:text="Số sản phẩm lỗi:"
-            android:textColor="#07197E"
-            android:textSize="16sp"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView8" />
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Số sản phẩm lỗi:"
+                android:textColor="#07197E"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tvSoSpLoi"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="3"
+                android:textColor="#07197E"
+                android:textSize="@dimen/_12ssp"
+                android:layout_marginLeft="8dp"/>
+        </LinearLayout>
 
         <TextView
             android:id="@+id/textViewControl"
@@ -122,7 +169,7 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.481"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewExpiryDate" />
+            app:layout_constraintTop_toBottomOf="@+id/lnLayoutSoSpLoi" />
 
 
         <TextView
@@ -153,7 +200,7 @@
             app:layout_constraintTop_toBottomOf="@+id/textView10" />
 
         <EditText
-            android:id="@+id/edtTsc2"
+            android:id="@+id/edtFailureProductionLimit"
             android:layout_width="50dp"
             android:layout_height="34dp"
             android:layout_marginLeft="56dp"
