--- a/app/src/main/res/layout/gioi_thieu.xml
+++ b/app/src/main/res/layout/gioi_thieu.xml
@@ -96,7 +96,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView9" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/lnLayoutNsx"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="195dp"
@@ -109,7 +109,7 @@
         app:layout_constraintTop_toBottomOf="@+id/textView6" />
 
     <TextView
-        android:id="@+id/textView8"
+        android:id="@+id/lnLayoutHsd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="195dp"
@@ -119,7 +119,7 @@
         android:textColor="#E13F0C"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView7" />
+        app:layout_constraintTop_toBottomOf="@+id/lnLayoutNsx" />
 
     <TextView
         android:id="@+id/textView9"
@@ -145,7 +145,7 @@
         android:textColor="#0E8013"
         android:textSize="14sp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        app:layout_constraintTop_toBottomOf="@+id/lnLayoutHsd" />
 
     <TextView
         android:id="@+id/textView11"
@@ -217,7 +217,7 @@
         android:text="1751050030"
         android:textColor="#0E8013"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView8" />
+        app:layout_constraintTop_toBottomOf="@+id/lnLayoutHsd" />
 
     <TextView
         android:id="@+id/textView17"
