--- a/app/src/main/res/layout/dieu_khien.xml
+++ b/app/src/main/res/layout/dieu_khien.xml
@@ -172,18 +172,34 @@
             app:layout_constraintTop_toBottomOf="@+id/lnLayoutSoSpLoi" />
 
 
-        <TextView
+        <LinearLayout
             android:id="@+id/textView10"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_18sdp"
             android:layout_marginLeft="20dp"
-            android:layout_marginTop="20dp"
-            android:text="Số lượng sản phẩm lỗi để ngưng hệ thống:"
-            android:textColor="#000"
-            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textViewControl" />
+            app:layout_constraintTop_toBottomOf="@+id/textViewControl"
+            android:layout_marginTop="20dp"
+            android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Số lượng sản phẩm lỗi để ngưng hệ thống:"
+                android:textColor="#000"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tvSluongSphamNgungHThong"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="100"
+                android:textColor="#000"
+                android:textSize="@dimen/_12ssp"
+                android:layout_marginLeft="8dp"/>
+
+        </LinearLayout>
 
 
         <TextView
@@ -256,18 +272,34 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textViewOn" />
 
-        <TextView
+
+        <LinearLayout
             android:id="@+id/textViewOn"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_18sdp"
             android:layout_marginTop="20dp"
-            android:text="Điều khiển hệ thống (ON)"
-            android:textColor="#000"
-            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/divider2" />
+            app:layout_constraintTop_toBottomOf="@+id/divider2"
+            android:orientation="horizontal">
 
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Điều khiển hệ thống"
+                android:textColor="#000"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tvSystemOn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="(ON)"
+                android:textColor="#000"
+                android:textSize="@dimen/_12ssp"
+                android:layout_marginLeft="8dp"/>
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tvEnterON0Or1"
@@ -286,13 +318,13 @@
             android:id="@+id/edtOn"
             android:layout_width="50dp"
             android:layout_height="34dp"
-            android:layout_marginLeft="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/bg_edittext_border"
             android:inputType="number"
             android:text="10"
-            app:layout_constraintLeft_toRightOf="@id/textViewOn"
-            app:layout_constraintTop_toBottomOf="@id/textViewOn"
-            android:background="@drawable/bg_edittext_border" />
+            app:layout_constraintLeft_toRightOf="@id/tvEnterON0Or1"
+            app:layout_constraintTop_toBottomOf="@id/textViewOn" />
 
         <View
             android:id="@+id/divider4"
@@ -305,17 +337,32 @@
             app:layout_constraintTop_toBottomOf="@+id/edtOn"
             android:layout_marginTop="8dp"/>
 
-        <TextView
+        <LinearLayout
             android:id="@+id/textViewOff"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="@dimen/_18sdp"
             android:layout_marginTop="20dp"
-            android:text="Điều khiển hệ thống (OFF)"
-            android:textColor="#000"
-            android:textSize="16sp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/divider4" />
+            app:layout_constraintTop_toBottomOf="@+id/divider4"             android:orientation="horizontal">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Điều khiển hệ thống"
+                android:textColor="#000"
+                android:textSize="16sp" />
+
+            <TextView
+                android:id="@+id/tvSystemOff"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="(FF)"
+                android:textColor="#000"
+                android:textSize="@dimen/_12ssp"
+                android:layout_marginLeft="8dp"/>
+
+        </LinearLayout>
 
         <TextView
             android:id="@+id/tvEnterOFF0Or1"
