--- a/app/src/main/res/layout/item_report.xml
+++ b/app/src/main/res/layout/item_report.xml
@@ -17,7 +17,7 @@
             android:text="0"
             android:textSize="@dimen/_16ssp"
             android:textColor="#000"
-            android:layout_weight="2"
+            android:layout_weight="1"
             android:gravity="center"/>
 
         <TextView
@@ -38,7 +38,7 @@
             android:textSize="@dimen/_16ssp"
             android:textColor="#000"
             android:layout_weight="2"
-            android:gravity="center"/>
+            android:gravity="start"/>
 
     </LinearLayout>
 
